Version 1.14 - 2017-11-09
* FEA#6682 Module Creation