@@ -1,2 +1,4 @@
+* FEA#7601 Interdiction de l'annulation d'avenant sur les contrats mis en réduction
+
 Version 1.14 - 2017-11-09
 * FEA#6682 Création du module
